<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center|top">

    <ImageView
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:src="@drawable/icon_pokeaprendo"
        android:layout_marginTop="50dp"/>


    <EditText
        android:id="@+id/etUser"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:hint="@string/user_hint"
        android:drawableStart="@drawable/ic_user"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:hint="@string/password_hint"
        android:drawableStart="@drawable/ic_password"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btIniciarSesion"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:text="@string/log_in"
        android:layout_marginVertical="15dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/redPokeAprendo"
        android:textStyle="bold"
        android:textSize="17dp"
        android:onClick="starCreateUserAc"/>

</androidx.appcompat.widget.LinearLayoutCompat>