<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUserActivity"
    android:orientation="vertical"
    android:gravity="center|top">


    <!--<ImageButton
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_margin="30dp"
        android:src="@drawable/ic_back"
        android:onClick="startHomeAct"/>-->


    <ImageButton
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_gravity="start"

        android:padding="12dp"
        android:layout_margin="30dp"
        android:src="@drawable/arrow_back"
        android:visibility="visible"
        android:onClick="startHomeAct"/>


    <ImageView
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:src="@drawable/icon_pokeaprendo"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/etUser"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/user_hint"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginVertical="15dp"/>

    <EditText
        android:id="@+id/etSecondPassword"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCreateUser"
        android:layout_width="230dp"
        android:layout_height="55dp"
        android:text="@string/create_account"
        android:layout_marginVertical="15dp"
        />

</LinearLayout>